--- a/styles/output/algebra-1-pdf.css
+++ b/styles/output/algebra-1-pdf.css
@@ -4294,8 +4294,10 @@ section.practice [data-type=injected-exercise][data-is-multipart=True] > [data-t
 
 [data-type=composite-chapter].os-eob.os-solutions-container > [data-type=composite-page] > .os-solution-area {
   display: table;
+  table-layout: fixed;
   margin-bottom: 1.4rem;
   width: 100%;
+  max-width: 100%;
 }
 
 [data-type=composite-chapter].os-eob.os-solutions-container > [data-type=composite-page] > .os-solution-area > span.os-note-number {
