--- a/styles/output/dev-math-pdf.css
+++ b/styles/output/dev-math-pdf.css
@@ -1186,8 +1186,10 @@ nav#toc > ol > li > ol > li > a::after {
 
 [data-type=composite-chapter].os-eob.os-solutions-container > [data-type=composite-page] > .os-solution-area {
   display: table;
+  table-layout: fixed;
   margin-bottom: 1.4rem;
   width: 100%;
+  max-width: 100%;
 }
 
 [data-type=composite-chapter].os-eob.os-solutions-container > [data-type=composite-page] > .os-solution-area > span.os-note-number {
