--- a/styles/output/precalculus-coreq-pdf.css
+++ b/styles/output/precalculus-coreq-pdf.css
@@ -4401,20 +4401,26 @@ section.coreq-skills [data-type=injected-exercise][data-is-multipart=True] > [da
 
 [data-type=composite-chapter].os-eob.os-solution-container > [data-type=composite-page] > .os-module-reset-solution-area {
   display: table;
+  table-layout: fixed;
   margin-bottom: 1.4rem;
   width: 100%;
+  max-width: 100%;
 }
 
 [data-type=composite-chapter].os-eob.os-solution-container > [data-type=composite-page] > .os-module-reset-solution-area > .os-solution-area {
   display: table;
+  table-layout: fixed;
   margin-bottom: 1.4rem;
   width: 100%;
+  max-width: 100%;
 }
 
 [data-type=composite-chapter].os-eob.os-solution-container > [data-type=composite-page] > .os-solution-area {
   display: table;
+  table-layout: fixed;
   margin-bottom: 1.4rem;
   width: 100%;
+  max-width: 100%;
 }
 
 .os-eob [data-type=solution] {
